opam-version: "1.2"
maintainer: "Anders Fugmann <anders@fugmann.net>"
authors: ["Anders Fugmann"]
tags: [ "firewall" "ipv4" "ipv6"]
license: "BSD3"
homepage: "https://github.com/andersfugmann/borderline"
dev-repo: "https://github.com/andersfugmann/borderline.git"
bug-reports: "github.com/andersfugmann/borderline/issues"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs "--profile" "release" ]
]
depends: [
  "dune"
  "core"
  "ipaddr"
  "ounit2"
]
