opam-version: "2.0"
maintainer: "Anders Fugmann <anders@fugmann.net>"
authors: ["Anders Fugmann"]
tags: [ "firewall" "ipv4" "ipv6"]
license: "GPL3"
homepage: "https://github.com/andersfugmann/borderline"
dev-repo: "git+https://github.com/andersfugmann/borderline"
bug-reports: "github.com/andersfugmann/borderline/issues"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs "--profile" "release" ]
  [ make "unittest" ] {with-test}
  [ make "tests" ] {with-test}
]

depends: [
  "dune"
  "core"
  "ipaddr"
  "ounit2"
]
synopsis: "IPv4 and Ipv6 firewall generator for linux nftables"
