opam-version: "2.0"
maintainer: "Anders Fugmann <anders@fugmann.net>"
authors: ["Anders Fugmann"]
tags: [ "firewall" "ipv4" "ipv6"]
license: "GPL3"
homepage: "https://github.com/andersfugmann/borderline"
dev-repo: "git+https://github.com/andersfugmann/borderline"
bug-reports: "github.com/andersfugmann/borderline/issues"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs]
  [ "dune" "runtest" "-p" name "-j" jobs] {with-test}
  [ make "unittest" ] {with-test}
  [ make "tests" ] {with-test}
]

depends: [
  "dune"
  "base"
  "core"
  "core_unix"
  "ipaddr"
  "ounit2"
  "ppx_deriving"
  "menhir"
]
synopsis: "IPv4 and Ipv6 firewall generator for linux nftables"
